--- a/css/style.css
+++ b/css/style.css
@@ -35,8 +35,12 @@ a {
     font-size: 16px !important;
   }
 }
+header {
+  position: relative;
+}
+
 .nav-container {
-  padding: 11px 0;
+  padding: 11px 0 2px 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -167,35 +171,27 @@ a {
 }
 
 .navbar {
-  --bs-navbar-padding-x: 0;
-  --bs-navbar-padding-y: 0.5rem;
-  --bs-navbar-color: rgba(var(--bs-emphasis-color-rgb), 0.65);
-  --bs-navbar-hover-color: rgba(var(--bs-emphasis-color-rgb), 0.8);
-  --bs-navbar-disabled-color: rgba(var(--bs-emphasis-color-rgb), 0.3);
-  --bs-navbar-active-color: rgba(var(--bs-emphasis-color-rgb), 1);
-  --bs-navbar-brand-padding-y: 0.3125rem;
-  --bs-navbar-brand-margin-end: 1rem;
-  --bs-navbar-brand-font-size: 1.25rem;
-  --bs-navbar-brand-color: rgba(var(--bs-emphasis-color-rgb), 1);
-  --bs-navbar-brand-hover-color: rgba(var(--bs-emphasis-color-rgb), 1);
-  --bs-navbar-nav-link-padding-x: 0.5rem;
-  --bs-navbar-toggler-padding-y: 0.25rem;
-  --bs-navbar-toggler-padding-x: 0.75rem;
-  --bs-navbar-toggler-font-size: 1.25rem;
-  --bs-navbar-toggler-icon-bg: url(
-    data:image/svg + xml,
-    %3csvgxmlns="http://www.w3.org/2000/svg"viewBox="0 0 30 30"%3e%3cpathstroke="rgba%2833, 37, 41, 0.75%29"stroke-linecap="round"stroke-miterlimit="10"stroke-width="2"d="M4 7h22M4 15h22M4 23h22"/%3e%3c/svg%3e
-  );
-  --bs-navbar-toggler-border-color: rgba(var(--bs-emphasis-color-rgb), 0.15);
-  --bs-navbar-toggler-border-radius: 0.375rem;
-  --bs-navbar-toggler-focus-width: 0.25rem;
-  --bs-navbar-toggler-transition: box-shadow 0.15s ease-in-out;
   position: relative;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
   padding: var(--bs-navbar-padding-y) var(--bs-navbar-padding-x);
+}
+
+#navbar {
+  box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 99;
+}
+
+.navbar-shrink .nav-container {
+  padding: 10px 0 0px 0;
+  transition: 0.5s;
+  z-index: 999;
 }
 
 .nav-link {
@@ -219,7 +215,9 @@ a {
 #navbarMenu,
 #footerMenu {
   position: absolute;
-  padding: 40px 70px;
+  left: 0;
+  right: 0;
+  padding: 40px 0;
   width: 100%;
   cursor: pointer;
   background-color: #fff;
@@ -233,27 +231,8 @@ a {
   z-index: 1;
 }
 
-.footer__fixed-menus {
-  display: none;
-  position: fixed;
-  bottom: 60px;
-  width: 100%;
-  z-index: 1;
-}
-.footer__fixed-menus ul a {
-  margin-bottom: 10px;
-}
-
-main {
-  padding: 80px 0;
-  background: #fbf8ec;
-}
-main .container h2 {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 2.25rem;
-  line-height: 150%;
-  color: #414141;
+#home {
+  margin-top: 80px;
 }
 
 .home-container {
@@ -329,6 +308,127 @@ main .container h2 {
   color: #ffffff;
   background: #ff6633;
   border-radius: 4px;
+}
+
+.footer__fixed-menus {
+  display: none;
+  position: fixed;
+  bottom: 60px;
+  width: 100%;
+  z-index: 1;
+}
+.footer__fixed-menus ul a {
+  margin-bottom: 10px;
+}
+
+footer .footer {
+  padding: 24px 0;
+  background: #f9f4e2;
+}
+footer .footer .footer-links .footer__links {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+@media (max-width: 1180px) {
+  footer .footer .footer-links .footer__links {
+    grid-template-columns: 1fr;
+  }
+}
+footer .footer .footer-links .footer__links li a {
+  white-space: nowrap;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 0.75rem;
+  line-height: 150%;
+  color: #414141;
+}
+footer .footer .footer-icons {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 16px 16px;
+}
+@media (max-width: 1200px) {
+  footer .footer .footer-icons {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media (max-width: 550px) {
+  footer .footer .footer-icons {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+@media (max-width: 625px) {
+  footer .footer .footer__call-center {
+    flex-direction: column;
+  }
+}
+footer .footer .footer__call-center a {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 150%;
+  color: #414141;
+}
+@media (max-width: 550px) {
+  footer .footer .footer__bottom-logo {
+    display: none !important;
+  }
+}
+footer .footer .footer__bottom-logo p {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 0.75rem;
+  line-height: 150%;
+  color: #414141;
+}
+
+.bottom__fixed-menu {
+  padding: 8px 0;
+  position: absolute;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: none;
+  background: #ffffff;
+  box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.1);
+}
+@media (max-width: 450px) {
+  .bottom__fixed-menu {
+    display: block;
+  }
+}
+.bottom__fixed-menu .bottom__fixed-btns {
+  gap: 35px 35px;
+}
+@media (max-width: 350px) {
+  .bottom__fixed-menu .bottom__fixed-btns {
+    overflow: scroll;
+  }
+  .bottom__fixed-menu .bottom__fixed-btns::-webkit-scrollbar {
+    display: none;
+  }
+}
+.bottom__fixed-menu .bottom__fixed-btns button {
+  border: none;
+  background-color: transparent;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 8px;
+  line-height: 150%;
+  color: #414141;
+}
+
+main {
+  padding: 80px 0;
+  background: #fbf8ec;
+}
+main .container h2 {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 2.25rem;
+  line-height: 150%;
+  color: #414141;
 }
 
 .nova__head {
@@ -586,100 +686,327 @@ main .container h2 {
   background: #70c05b;
 }
 
-footer .footer {
-  padding: 24px 0;
-  background: #f9f4e2;
-}
-footer .footer .footer-links .footer__links {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-}
-@media (max-width: 1180px) {
-  footer .footer .footer-links .footer__links {
-    grid-template-columns: 1fr;
-  }
-}
-footer .footer .footer-links .footer__links li a {
-  white-space: nowrap;
-  font-style: normal;
+.page-links span {
   font-weight: 400;
   font-size: 0.75rem;
   line-height: 150%;
   color: #414141;
 }
-footer .footer .footer-icons {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 16px 16px;
+.page-links p {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 0.75rem;
+  line-height: 150%;
+  color: #8f8f8f;
 }
-@media (max-width: 1200px) {
-  footer .footer .footer-icons {
-    grid-template-columns: 1fr 1fr;
+
+.catalog-head {
+  margin-top: 24px;
+}
+
+.catalog-row {
+  width: 100%;
+}
+@media (min-width: 500px) {
+  .catalog-row:nth-child(1) {
+    width: 45%;
+  }
+  .catalog-row:nth-child(2) {
+    width: 45%;
+  }
+  .catalog-row:nth-child(3) {
+    width: 45%;
+  }
+  .catalog-row:nth-child(4) {
+    width: 45%;
+  }
+  .catalog-row:nth-child(5) {
+    width: 45%;
+  }
+  .catalog-row:nth-child(6) {
+    width: 45%;
+  }
+  .catalog-row:nth-child(7) {
+    width: 45%;
+  }
+  .catalog-row:nth-child(8) {
+    width: 45%;
+  }
+  .catalog-row:nth-child(9) {
+    width: 45%;
+  }
+  .catalog-row:nth-child(10) {
+    width: 45%;
+  }
+  .catalog-row:nth-child(11) {
+    width: 45%;
+  }
+  .catalog-row:nth-child(12) {
+    width: 45%;
+  }
+  .catalog-row:nth-child(13) {
+    width: 45%;
   }
 }
-@media (max-width: 550px) {
-  footer .footer .footer-icons {
+@media (min-width: 800px) {
+  .catalog-row:nth-child(1) {
+    width: 47%;
+  }
+  .catalog-row:nth-child(2) {
+    width: 47%;
+  }
+  .catalog-row:nth-child(3) {
+    width: 47%;
+  }
+  .catalog-row:nth-child(4) {
+    width: 47%;
+  }
+  .catalog-row:nth-child(5) {
+    width: 47%;
+  }
+  .catalog-row:nth-child(6) {
+    width: 47%;
+  }
+  .catalog-row:nth-child(7) {
+    width: 47%;
+  }
+  .catalog-row:nth-child(8) {
+    width: 47%;
+  }
+  .catalog-row:nth-child(9) {
+    width: 47%;
+  }
+  .catalog-row:nth-child(10) {
+    width: 47%;
+  }
+  .catalog-row:nth-child(11) {
+    width: 47%;
+  }
+  .catalog-row:nth-child(12) {
+    width: 47%;
+  }
+  .catalog-row:nth-child(13) {
+    width: 47%;
+  }
+}
+@media (min-width: 1000px) {
+  .catalog-row:nth-child(1) {
+    width: 30.4%;
+  }
+  .catalog-row:nth-child(2) {
+    width: 30.4%;
+  }
+  .catalog-row:nth-child(3) {
+    width: 30.4%;
+  }
+  .catalog-row:nth-child(4) {
+    width: 30.4%;
+  }
+  .catalog-row:nth-child(5) {
+    width: 30.4%;
+  }
+  .catalog-row:nth-child(6) {
+    width: 30.4%;
+  }
+  .catalog-row:nth-child(7) {
+    width: 30.4%;
+  }
+  .catalog-row:nth-child(8) {
+    width: 30.4%;
+  }
+  .catalog-row:nth-child(9) {
+    width: 30.4%;
+  }
+  .catalog-row:nth-child(10) {
+    width: 30.4%;
+  }
+  .catalog-row:nth-child(11) {
+    width: 30.4%;
+  }
+  .catalog-row:nth-child(12) {
+    width: 30.4%;
+  }
+  .catalog-row:nth-child(13) {
+    width: 30.4%;
+  }
+}
+@media (min-width: 1300px) {
+  .catalog-row:nth-child(1) {
+    width: 48%;
+  }
+  .catalog-row:nth-child(2) {
+    width: 22.5%;
+  }
+  .catalog-row:nth-child(3) {
+    width: 22.5%;
+  }
+  .catalog-row:nth-child(4) {
+    width: 22.5%;
+  }
+  .catalog-row:nth-child(5) {
+    width: 22.5%;
+  }
+  .catalog-row:nth-child(6) {
+    width: 22.5%;
+  }
+  .catalog-row:nth-child(7) {
+    width: 22.5%;
+  }
+  .catalog-row:nth-child(8) {
+    width: 22.5%;
+  }
+  .catalog-row:nth-child(9) {
+    width: 22.5%;
+  }
+  .catalog-row:nth-child(10) {
+    width: 48%;
+  }
+  .catalog-row:nth-child(11) {
+    width: 22.5%;
+  }
+  .catalog-row:nth-child(12) {
+    width: 48%;
+  }
+  .catalog-row:nth-child(13) {
+    width: 22.5%;
+  }
+}
+
+.catalog-products {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 40px;
+}
+
+.catalog-row {
+  position: relative;
+}
+.catalog-row img {
+  width: 100%;
+}
+
+.catalog-content {
+  padding: 80px 10px 10px 10px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: linear-gradient(180deg, rgba(112, 192, 91, 0) 0%, #70c05b 82.81%);
+}
+.catalog-content:hover {
+  background: linear-gradient(180deg, rgba(255, 102, 51, 0) 0%, #ff6633 100%);
+}
+.catalog-content h5 {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 1.125rem;
+  line-height: 150%;
+  color: #ffffff;
+}
+
+.search-top {
+  margin-top: 80px;
+}
+
+.search-cards {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 40px 40px;
+}
+.search-cards img {
+  width: 100%;
+}
+@media (min-width: 500px) {
+  .search-cards {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (min-width: 1000px) {
+  .search-cards {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media (min-width: 1200px) {
+  .search-cards {
     grid-template-columns: repeat(4, 1fr);
   }
 }
-@media (max-width: 625px) {
-  footer .footer .footer__call-center {
-    flex-direction: column;
-  }
+.search-cards .search-card {
+  background: #ffffff;
+  box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
 }
-footer .footer .footer__call-center a {
+.search-cards .search-card .search-content {
+  padding: 8px;
+}
+.search-cards .search-card .search-payment,
+.search-cards .search-card .search-price {
+  justify-content: space-between;
+}
+
+.search-alert {
+  margin-top: 50px;
+  display: flex;
+  justify-content: start;
+}
+
+.search-text {
+  margin-bottom: 40px;
+}
+.search-text h5 {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.5rem;
+  line-height: 150%;
+  color: #414141;
+}
+.search-text h6 {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.5rem;
+  line-height: 150%;
+  color: #ff6633;
+}
+
+.search-prices h5 {
+  margin: 0;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 1.125rem;
+  line-height: 150%;
+  color: #414141;
+}
+.search-prices h6 {
+  margin: 0;
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 150%;
+  color: #606060;
+}
+.search-prices p {
+  margin: 0;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 0.75rem;
+  line-height: 150%;
+  color: #bfbfbf;
+}
+
+.search-btn {
+  margin-top: 16px;
+  padding: 8px;
+  width: 100%;
   font-style: normal;
   font-weight: 400;
   font-size: 1rem;
   line-height: 150%;
-  color: #414141;
+  color: #70c05b;
+  border: 1px solid #70c05b;
+  border-radius: 4px;
+  transition: 0.3s;
 }
-@media (max-width: 550px) {
-  footer .footer .footer__bottom-logo {
-    display: none !important;
-  }
-}
-footer .footer .footer__bottom-logo p {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 0.75rem;
-  line-height: 150%;
-  color: #414141;
-}
-
-.bottom__fixed-menu {
-  padding: 8px 0;
-  position: absolute;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  display: none;
-  background: #ffffff;
-  box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.1);
-}
-@media (max-width: 450px) {
-  .bottom__fixed-menu {
-    display: block;
-  }
-}
-.bottom__fixed-menu .bottom__fixed-btns {
-  gap: 35px 35px;
-}
-@media (max-width: 350px) {
-  .bottom__fixed-menu .bottom__fixed-btns {
-    overflow: scroll;
-  }
-  .bottom__fixed-menu .bottom__fixed-btns::-webkit-scrollbar {
-    display: none;
-  }
-}
-.bottom__fixed-menu .bottom__fixed-btns button {
-  border: none;
-  background-color: transparent;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 8px;
-  line-height: 150%;
-  color: #414141;
+.search-btn:hover {
+  color: #ffffff;
+  background: #ff6633;
+  border-radius: 4px;
 }
