--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,5 @@
+// HEAD !!!!!!!!!!!!!!!!!!!!!!!!
+
 body {
   font-family: "Rubik", sans-serif;
 }
@@ -38,14 +40,21 @@ a {
   }
 }
 
+// HEADER !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+
+header {
+  position: relative;
+}
+
+// NAVBAR!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+
 .nav-container {
-  padding: 11px 0;
+  padding: 11px 0 2px 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
+
   @media (max-width: 650px) {
-    // flex-direction: column;
-    // align-content: center;
     gap: 20px;
   }
   .navbar__res-logo {
@@ -181,35 +190,29 @@ a {
 }
 
 .navbar {
-  --bs-navbar-padding-x: 0;
-  --bs-navbar-padding-y: 0.5rem;
-  --bs-navbar-color: rgba(var(--bs-emphasis-color-rgb), 0.65);
-  --bs-navbar-hover-color: rgba(var(--bs-emphasis-color-rgb), 0.8);
-  --bs-navbar-disabled-color: rgba(var(--bs-emphasis-color-rgb), 0.3);
-  --bs-navbar-active-color: rgba(var(--bs-emphasis-color-rgb), 1);
-  --bs-navbar-brand-padding-y: 0.3125rem;
-  --bs-navbar-brand-margin-end: 1rem;
-  --bs-navbar-brand-font-size: 1.25rem;
-  --bs-navbar-brand-color: rgba(var(--bs-emphasis-color-rgb), 1);
-  --bs-navbar-brand-hover-color: rgba(var(--bs-emphasis-color-rgb), 1);
-  --bs-navbar-nav-link-padding-x: 0.5rem;
-  --bs-navbar-toggler-padding-y: 0.25rem;
-  --bs-navbar-toggler-padding-x: 0.75rem;
-  --bs-navbar-toggler-font-size: 1.25rem;
-  --bs-navbar-toggler-icon-bg: url(
-    data:image/svg + xml,
-    %3csvgxmlns="http://www.w3.org/2000/svg"viewBox="0 0 30 30"%3e%3cpathstroke="rgba%2833, 37, 41, 0.75%29"stroke-linecap="round"stroke-miterlimit="10"stroke-width="2"d="M4 7h22M4 15h22M4 23h22"/%3e%3c/svg%3e
-  );
-  --bs-navbar-toggler-border-color: rgba(var(--bs-emphasis-color-rgb), 0.15);
-  --bs-navbar-toggler-border-radius: 0.375rem;
-  --bs-navbar-toggler-focus-width: 0.25rem;
-  --bs-navbar-toggler-transition: box-shadow 0.15s ease-in-out;
   position: relative;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
   padding: var(--bs-navbar-padding-y) var(--bs-navbar-padding-x);
+}
+
+#navbar {
+  box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 99;
+}
+
+.navbar-shrink {
+  .nav-container {
+    padding: 10px 0 0px 0;
+    transition: 0.5s;
+    z-index: 999;
+  }
 }
 
 .nav-link {
@@ -233,7 +236,9 @@ a {
 #navbarMenu,
 #footerMenu {
   position: absolute;
-  padding: 40px 70px;
+  left: 0;
+  right: 0;
+  padding: 40px 0;
   width: 100%;
   cursor: pointer;
   background-color: #fff;
@@ -247,31 +252,10 @@ a {
   z-index: 1;
 }
 
-.footer__fixed-menus {
-  display: none;
-  position: fixed;
-  bottom: 60px;
-  width: 100%;
-  z-index: 1;
-  ul {
-    a {
-      margin-bottom: 10px;
-    }
-  }
-}
+// HOME!!!!!!!!!!!!!!!!!!!!!
 
-main {
-  padding: 80px 0;
-  background: #fbf8ec;
-  .container {
-    h2 {
-      font-style: normal;
-      font-weight: 700;
-      font-size: 2.25rem;
-      line-height: 150%;
-      color: #414141;
-    }
-  }
+#home {
+  margin-top: 80px;
 }
 
 .home-container {
@@ -344,6 +328,131 @@ main {
         background: #ff6633;
         border-radius: 4px;
       }
+    }
+  }
+}
+
+// FOOTER!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+
+.footer__fixed-menus {
+  display: none;
+  position: fixed;
+  bottom: 60px;
+  width: 100%;
+  z-index: 1;
+  ul {
+    a {
+      margin-bottom: 10px;
+    }
+  }
+}
+
+footer {
+  .footer {
+    padding: 24px 0;
+    background: #f9f4e2;
+    .footer-links {
+      .footer__links {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        @media (max-width: 1180px) {
+          grid-template-columns: 1fr;
+        }
+        li {
+          a {
+            white-space: nowrap;
+            font-style: normal;
+            font-weight: 400;
+            font-size: 0.75rem;
+            line-height: 150%;
+            color: #414141;
+          }
+        }
+      }
+    }
+    .footer-icons {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      grid-gap: 16px 16px;
+      @media (max-width: 1200px) {
+        grid-template-columns: 1fr 1fr;
+      }
+      @media (max-width: 550px) {
+        grid-template-columns: repeat(4, 1fr);
+      }
+    }
+    .footer__call-center {
+      @media (max-width: 625px) {
+        flex-direction: column;
+      }
+      a {
+        font-style: normal;
+        font-weight: 400;
+        font-size: 1rem;
+        line-height: 150%;
+        color: #414141;
+      }
+    }
+    .footer__bottom-logo {
+      @media (max-width: 550px) {
+        display: none !important;
+      }
+      p {
+        font-style: normal;
+        font-weight: 400;
+        font-size: 0.75rem;
+        line-height: 150%;
+        color: #414141;
+      }
+    }
+  }
+}
+
+.bottom__fixed-menu {
+  padding: 8px 0;
+  position: absolute;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: none;
+  @media (max-width: 450px) {
+    display: block;
+  }
+  background: #ffffff;
+  box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.1);
+  .bottom__fixed-btns {
+    @media (max-width: 350px) {
+      overflow: scroll;
+      &::-webkit-scrollbar {
+        display: none;
+      }
+    }
+    gap: 35px 35px;
+    button {
+      border: none;
+      background-color: transparent;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 8px;
+      line-height: 150%;
+      color: #414141;
+    }
+  }
+}
+
+// MAIN !!!!!!!!!!!!!!!!
+
+main {
+  padding: 80px 0;
+  background: #fbf8ec;
+  .container {
+    h2 {
+      font-style: normal;
+      font-weight: 700;
+      font-size: 2.25rem;
+      line-height: 150%;
+      color: #414141;
     }
   }
 }
@@ -592,96 +701,333 @@ main {
   }
 }
 
-footer {
-  .footer {
-    padding: 24px 0;
-    background: #f9f4e2;
-    .footer-links {
-      .footer__links {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        @media (max-width: 1180px) {
-          grid-template-columns: 1fr;
-        }
-        li {
-          a {
-            white-space: nowrap;
-            font-style: normal;
-            font-weight: 400;
-            font-size: 0.75rem;
-            line-height: 150%;
-            color: #414141;
-          }
-        }
-      }
+// CATALOG PAGE !!!!!!!!!!!!!!!!!!!
+
+// MAIN
+
+.page-links {
+  span {
+    font-weight: 400;
+    font-size: 0.75rem;
+    line-height: 150%;
+    color: #414141;
+  }
+  p {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 0.75rem;
+    line-height: 150%;
+    color: #8f8f8f;
+  }
+}
+
+// CATALOG-ROWS!!!!!!!!!!!!
+
+.catalog-head {
+  margin-top: 24px;
+}
+
+.catalog-row {
+  width: 100%;
+  @media (min-width: 500px) {
+    &:nth-child(1) {
+      width: 45%;
     }
-    .footer-icons {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      grid-gap: 16px 16px;
-      @media (max-width: 1200px) {
-        grid-template-columns: 1fr 1fr;
-      }
-      @media (max-width: 550px) {
-        grid-template-columns: repeat(4, 1fr);
-      }
+    &:nth-child(2) {
+      width: 45%;
     }
-    .footer__call-center {
-      @media (max-width: 625px) {
-        flex-direction: column;
-      }
-      a {
-        font-style: normal;
-        font-weight: 400;
-        font-size: 1rem;
-        line-height: 150%;
-        color: #414141;
-      }
+    &:nth-child(3) {
+      width: 45%;
     }
-    .footer__bottom-logo {
-      @media (max-width: 550px) {
-        display: none !important;
-      }
-      p {
-        font-style: normal;
-        font-weight: 400;
-        font-size: 0.75rem;
-        line-height: 150%;
-        color: #414141;
-      }
+    &:nth-child(4) {
+      width: 45%;
+    }
+    &:nth-child(5) {
+      width: 45%;
+    }
+    &:nth-child(6) {
+      width: 45%;
+    }
+    &:nth-child(7) {
+      width: 45%;
+    }
+    &:nth-child(8) {
+      width: 45%;
+    }
+    &:nth-child(9) {
+      width: 45%;
+    }
+    &:nth-child(10) {
+      width: 45%;
+    }
+    &:nth-child(11) {
+      width: 45%;
+    }
+    &:nth-child(12) {
+      width: 45%;
+    }
+    &:nth-child(13) {
+      width: 45%;
+    }
+  }
+  @media (min-width: 800px) {
+    &:nth-child(1) {
+      width: 47%;
+    }
+    &:nth-child(2) {
+      width: 47%;
+    }
+    &:nth-child(3) {
+      width: 47%;
+    }
+    &:nth-child(4) {
+      width: 47%;
+    }
+    &:nth-child(5) {
+      width: 47%;
+    }
+    &:nth-child(6) {
+      width: 47%;
+    }
+    &:nth-child(7) {
+      width: 47%;
+    }
+    &:nth-child(8) {
+      width: 47%;
+    }
+    &:nth-child(9) {
+      width: 47%;
+    }
+    &:nth-child(10) {
+      width: 47%;
+    }
+    &:nth-child(11) {
+      width: 47%;
+    }
+    &:nth-child(12) {
+      width: 47%;
+    }
+    &:nth-child(13) {
+      width: 47%;
+    }
+  }
+  @media (min-width: 1000px) {
+    &:nth-child(1) {
+      width: 30.4%;
+    }
+    &:nth-child(2) {
+      width: 30.4%;
+    }
+    &:nth-child(3) {
+      width: 30.4%;
+    }
+    &:nth-child(4) {
+      width: 30.4%;
+    }
+    &:nth-child(5) {
+      width: 30.4%;
+    }
+    &:nth-child(6) {
+      width: 30.4%;
+    }
+    &:nth-child(7) {
+      width: 30.4%;
+    }
+    &:nth-child(8) {
+      width: 30.4%;
+    }
+    &:nth-child(9) {
+      width: 30.4%;
+    }
+    &:nth-child(10) {
+      width: 30.4%;
+    }
+    &:nth-child(11) {
+      width: 30.4%;
+    }
+    &:nth-child(12) {
+      width: 30.4%;
+    }
+    &:nth-child(13) {
+      width: 30.4%;
+    }
+  }
+  @media (min-width: 1300px) {
+    &:nth-child(1) {
+      width: 48%;
+    }
+    &:nth-child(2) {
+      width: 22.5%;
+    }
+    &:nth-child(3) {
+      width: 22.5%;
+    }
+    &:nth-child(4) {
+      width: 22.5%;
+    }
+    &:nth-child(5) {
+      width: 22.5%;
+    }
+    &:nth-child(6) {
+      width: 22.5%;
+    }
+    &:nth-child(7) {
+      width: 22.5%;
+    }
+    &:nth-child(8) {
+      width: 22.5%;
+    }
+    &:nth-child(9) {
+      width: 22.5%;
+    }
+    &:nth-child(10) {
+      width: 48%;
+    }
+    &:nth-child(11) {
+      width: 22.5%;
+    }
+    &:nth-child(12) {
+      width: 48%;
+    }
+    &:nth-child(13) {
+      width: 22.5%;
     }
   }
 }
 
-.bottom__fixed-menu {
-  padding: 8px 0;
+.catalog-products {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 40px;
+}
+
+.catalog-row {
+  position: relative;
+  img {
+    width: 100%;
+  }
+}
+
+.catalog-content {
+  padding: 80px 10px 10px 10px;
   position: absolute;
-  position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
-  display: none;
-  @media (max-width: 450px) {
-    display: block;
+  background: linear-gradient(180deg, rgba(112, 192, 91, 0) 0%, #70c05b 82.81%);
+  &:hover {
+    background: linear-gradient(180deg, rgba(255, 102, 51, 0) 0%, #ff6633 100%);
   }
-  background: #ffffff;
-  box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.1);
-  .bottom__fixed-btns {
-    @media (max-width: 350px) {
-      overflow: scroll;
-      &::-webkit-scrollbar {
-        display: none;
-      }
+  h5 {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 1.125rem;
+    line-height: 150%;
+    color: #ffffff;
+  }
+}
+
+// ResultSearch page !!!!!!!!!!!!!!!!!
+
+.search-top {
+  margin-top: 80px;
+}
+
+.search-cards {
+  img {
+    width: 100%;
+  }
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 40px 40px;
+  @media (min-width: 500px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  @media (min-width: 1000px) {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  @media (min-width: 1200px) {
+    grid-template-columns: repeat(4, 1fr);
+  }
+  .search-card {
+    background: #ffffff;
+    box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 4px;
+    .search-content {
+      padding: 8px;
     }
-    gap: 35px 35px;
-    button {
-      border: none;
-      background-color: transparent;
-      font-style: normal;
-      font-weight: 400;
-      font-size: 8px;
-      line-height: 150%;
-      color: #414141;
+    .search-payment,
+    .search-price {
+      justify-content: space-between;
     }
+  }
+}
+
+.search-alert {
+  margin-top: 50px;
+  display: flex;
+  justify-content: start;
+}
+
+.search-text {
+  margin-bottom: 40px;
+  h5 {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1.5rem;
+    line-height: 150%;
+    color: #414141;
+  }
+  h6 {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1.5rem;
+    line-height: 150%;
+    color: #ff6633;
+  }
+}
+
+.search-prices {
+  h5 {
+    margin: 0;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 1.125rem;
+    line-height: 150%;
+    color: #414141;
+  }
+  h6 {
+    margin: 0;
+    font-weight: 400;
+    font-size: 1rem;
+    line-height: 150%;
+    color: #606060;
+  }
+  p {
+    margin: 0;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 0.75rem;
+    line-height: 150%;
+    color: #bfbfbf;
+  }
+}
+
+.search-btn {
+  margin-top: 16px;
+  padding: 8px;
+  width: 100%;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 150%;
+  color: #70c05b;
+  border: 1px solid #70c05b;
+  border-radius: 4px;
+  transition: 0.3s;
+  &:hover {
+    color: #ffffff;
+    background: #ff6633;
+    border-radius: 4px;
   }
 }
